# pdf_utilities

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bitbucket-pipelines.yml  build_app.py  pyproject.toml
.github/workflows/: build.yml
deployment-scripts/: build_and_push_image.sh  execute_remote_deploy.sh
src/translation_service/: .env.example  __init__.py  api.py  browser_translate.py  env_config.py  logger_utils.py  pdf_utils.py  translate_utils.py
