[project]
name = "translation_service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-auth",
    "pydantic-settings",
    "google-cloud-storage",
    "google-cloud-translate",
    "python-decouple",
    "pymupdf",
    "pdf2docx",
    "docx2pdf",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pytesseract",
    "pdf2image",
    "pypdf2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/translation_service"]

[tool.hatch.build.targets.editable]
packages = ["src/translation_service"]

[dependency-groups]
dev = [
    "translation-service",
]

[tool.uv.sources]
translation-service = { workspace = true }
